<resources>
    <string name="app_name">ControlFreaksApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_name">Kevin Kayembe</string>
    <string name="nav_header_emailAddress">w0726803@myscc.ca</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_subs">Subscription</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tips">Tips</string>

    <string name="about_button">About</string>
    <string name="shop_button">Shop</string>
    <string name="contact_button">Contact</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_button">Phone</string>
    <string name="email_button">Email</string>
    <string name="trackOrder_button">Track My Order</string>

    <string name="aboutUsTitle">What is Control Freaks?</string>
    <string name="aboutUsDesc">Control Freaks is a company that customizes the controllers of all platforms. \n
        Our job is to have users make use of our controller creation to know what they want or purchase our original pre-made controllers instead. \n
        Once purchases are made, we\'ll give each first-time users a 1-year warranty and have their custom controller shipped to your home in due time.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>