<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_subscription">

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.controlfreaksapp.ViewPager.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.controlfreaksapp.Fragments.ContactFragment"
        android:label="@string/contact_button"
        tools:layout="@layout/fragment_contact">
        <action
            android:id="@+id/action_nav_contact_to_nav_tracking"
            app:destination="@id/nav_tracking" />
    </fragment>
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.controlfreaksapp.ViewPager.InfoFragment"
        android:label="fragment_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.controlfreaksapp.Fragments.AboutFragment"
        android:label="@string/about_button"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.controlfreaksapp.Fragments.ShopFragment"
        android:label="@string/shop_button"
        tools:layout="@layout/fragment_shop" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.controlfreaksapp.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_shop"
            app:destination="@id/nav_shop" />
        <action
            android:id="@+id/action_nav_home_to_nav_contact"
            app:destination="@id/nav_contact" />
        <action
            android:id="@+id/action_nav_home_to_nav_about"
            app:destination="@id/nav_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_subscription"
        android:name="com.example.controlfreaksapp.Fragments.SubscriptionFragment"
        android:label="@string/menu_subs"
        tools:layout="@layout/fragment_subscription" />
    <fragment
        android:id="@+id/nav_tracking"
        android:name="com.example.controlfreaksapp.Fragments.TrackOrderFragment"
        android:label="@string/trackOrder_button"
        tools:layout="@layout/fragment_track_order" />

</navigation>